test/spec_vectors/local_get/fail/module_10.wat
(module (func $type-empty-vs-f64 (local f64) (local.get 0)))